--- a/info.yaml
+++ b/info.yaml
@@ -1,6 +1,6 @@
 # Tiny Tapeout project information
 project:
-  title:        "4-bit Koggerstone Adder"      # Project title
+  title:        "4-bit Koggestone Adder"      # Project title
   author:       "Seongwan Jeon"      # Your name
   discord:      ""      # Your discord username, for communication and automatically assigning you a Tapeout role (optional)
   description:  "Fast 4-bit adder"      # One line description of what your project does
@@ -11,7 +11,7 @@ project:
   tiles: "1x1"          # Valid values: 1x1, 1x2, 2x2, 3x2, 4x2, 6x2 or 8x2
 
   # Your top module name must start with "tt_um_". Make it unique by including your github username:
-  top_module:  "tt_um_koggerstone_adder4"
+  top_module:  "tt_um_koggestone_adder4"
 
   # List your project's source files here.
   # Source files must be in ./src and you must list each source file separately, one per line.
